--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -6,35 +6,26 @@
 .formName,
 .formNumber {
   display: flex;
-  flex-direction: column;
   margin: 0.5rem auto;
-  align-items: center;
   font-size: large;
-  text-align: left;
   padding: 0.5rem 15rem 0.5rem 1rem;
+  border-radius: 4px;
+  border: 1px solid blue;
 }
 
 .formBtn {
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  background-color: rgba(23, 26, 32, 0.8);
+  margin: 5px;
+  background-color: blue;
   border: none;
-  border-radius: 6px;
-  color: #fff;
-  flex-grow: 1;
-  font-family: SFProText-Regular, Helvetica, Arial, sans-serif;
+  border-radius: 4px;
   font-size: 15px;
-  height: 36px;
-  line-height: 20px;
-  margin-left: 8px;
-  margin-right: 6px;
+  height: 40px;
   min-width: 185px;
-  padding: 0 16px 0 16px;
   color: white;
   cursor: pointer;
 }
 
 .formBtn:hover {
-  background-color: rgba(23, 26, 32, 1);
+  background-color: blueviolet;
   cursor: pointer;
 }
