--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,25 +1,18 @@
 .contactListItemBtn {
-  margin-top: 1rem;
-  margin-bottom: 0.5rem;
-  align-items: right;
-  background-color: rgba(23, 26, 32, 0.8);
+  margin: 5px;
+  background-color: blue;
   border: none;
-  border-radius: 6px;
-  color: #fff;
-  flex-grow: 1;
-  font-family: SFProText-Regular, Helvetica, Arial, sans-serif;
+  border-radius: 4px;
   font-size: 15px;
   height: 36px;
   line-height: 20px;
-  margin-left: 8px;
-  margin-right: 6px;
   min-width: 50px;
-  padding: 0 16px 0 16px;
+  padding: 0 16px;
   color: white;
   cursor: pointer;
 }
 
 .contactListItemBtn:hover {
-  background-color: rgba(23, 26, 32, 1);
+  background-color: blueviolet;
   cursor: pointer;
 }
